# ctmp_broadcaster

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dockerfile  presentation.md
include/: client_handler.h  ctmp_message.h  server.h
src/: client_handler.cpp  ctmp_message.cpp  main.cpp  server.cpp
v1/include/: config.h  ctmp_message.h
v1/src/: client_handler.cpp  ctmp_message.cpp  server.cpp
